--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevPortfolio | John Doe - Full Stack Developer</title>
+    <title>Aayush Yadav | Full Stack Developer</title>
     <meta name="description" content="Cyber-themed developer portfolio showcasing cutting-edge web development projects and technical expertise" />
-    <meta name="author" content="John Doe" />
+    <meta name="author" content="Aayush Yadav" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=JetBrains+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="sleek-persona-folio" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Aayush Yadav | Portfolio" />
+    <meta property="og:description" content="Cyber-themed developer portfolio showcasing cutting-edge web development projects and technical expertise" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://aayushyadav.com/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@aayushyadav" />
+    <meta name="twitter:image" content="https://aayushyadav.com/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
